<resources>
    <string name="app_name">小天盒子</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">小天盒子 开发版2.0 @surine</string>
    <string name="version">小天盒子 2.0.7-Beta1</string>
    <string name="about">我已认真阅读使用说明与协议！</string>
    <string name="warning_text">注意</string>
    <string name="ok">确定</string>
    <string name="wrong">帐号或者密码错误,或者教务处异常！</string>
    <string name="success">请求成功！</string>
    <string name="manager_">URP综合教务系统首页</string>
    <string name="fail">请求超时！请检查是否校园网连接</string>
    <string name="get">获取</string>
    <string name="get_info">正在获取个人信息……</string>
    <string name="login">登录</string>
    <string name="login_info">正在登录教务处,请保持良好的校园网环境……</string>
    <string name="save_success">个人信息储存成功</string>
    <string name="title_course">课表</string>
    <string name="box">盒子</string>
    <string name="me">我</string>
    <string name="unknow_error">未知错误</string>
    <string name="school_network">校园网</string>
    <string name="id3">myusername</string>
    <string name="id4">smartdot</string>
    <string name="id5">username</string>
    <string name="no_class">今天没有课，快去约吧！</string>
    <string name="i_know">朕知道啦！</string>
    <string name="happy">^_^ HAPPY！</string>
    <string name="close_dialog_summ">打开后每天的课程将不会弹窗提醒</string>
    <string name="today_course_title">关闭每日课程提醒</string>
    <string name="setting_background_summ">选择一张喜欢的图片作为课表背景</string>
    <string name="setting_back_title">课表背景图片</string>
    <string name="about_app">关于</string>
    <string name="about_tustbox">关于小天盒子</string>
    <string name="setting">系统设置</string>
    <string name="score">成绩</string>
    <string name="login_success">登录成功</string>
    <string name="gpa">GPA计算</string>
    <string name="calculate_file">计算文件</string>
    <string name="share_my_score">给妈妈发成绩单！</string>
    <string name="loading">正在加载数据，请稍后……</string>
    <string name="library">图书馆</string>
    <string name="exit">注销账号</string>
    <string name="exit_info">注销账号将清除本用户全部数据！</string>
    <string name="cancel">取消</string>
    <string name="choose_week">选择当前周</string>
    <string name="choose_">选择了</string>
    <string name="f1">优秀</string>
    <string name="f2">良好</string>
    <string name="f3">中</string>
    <string name="f4">及格</string>
    <string name="f5">不及格</string>
    <string name="this_term_gpa">本学期绩点（仅供参考）：</string>
    <string name="share_your_score_to">把您的成绩分享到？</string>
    <string name="course_info">详情</string>
    <string name="null_number_and_pswd">学号或者密码为空</string>
    <string name="plan">培养方案</string>
    <string name="error_information">错误信息</string>
    <string name="get_error">获取信息失败，请重新登录</string>
    <string name="get_success">信息获取成功</string>
    <string name="clear_success">数据清除成功</string>
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择图片</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张哦！</string>
    <string name="qq">QQ群</string>
    <string name="surine">· 开发者：Surine</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_sunmmy">清除选择壁纸留下的缓存，清除后请重新选择背景图片</string>
    <string name="error_get_data">数据获取错误，请重新获取或者联系开发者</string>
    <string name="learn_info">修读信息</string>
    <string name="no_more_info">没有取得有价值信息</string>
    <string name="gp">GP下载平台</string>
    <string name="bug_or">Bug反馈 OR 吐槽</string>
    <string name="bug_to_qq">为了保证问题及时解决，建议您直接加群反馈</string>
    <string name="support">支持</string>
    <string name="check_update">检查更新</string>
    <string name="notice2">免责声明</string>
    <string name="notice_info">使用小天需要注意的!</string>
    <string name="app">一个优秀的APP都是要有底线的！</string>
    <string name="osl">· 开源许可</string>
    <string name="osl2">开源许可</string>
    <string name="help">赞助开发者</string>
    <string name="help_Alipay">小可爱们可以自愿捐助我，捐赠收入将用于维护小天盒子服务器！（点击复制支付宝帐号）</string>
    <string name="surine_is_me">新世纪的Android爱好者，xiaxiaxia~</string>
    <string name="qq_number">点我复制QQ群：635622188</string>
    <string name="qq_is_copy">QQ已经复制到剪贴板</string>
    <string name="welcome">点击下载小天盒子（暂只支持Android版）</string>
    <string name="more_share">我是一只盒子。</string>
    <string name="type">你要使用什么方式联系盒子呢？</string>
    <string name="what_do_you_want_to_say">想说点什么？</string>
    <string name="welcome_send_bug">欢迎给盒子提出意见：</string>
    <string name="qq_email">2234503567@qq.com</string>
    <string name="qq_email_mo">mailto:2234503567@qq.com</string>
    <string name="log">日志</string>
    <string name="new_log"> 小天[V3.0.0],盒子，在探索中进步。\n
        · 我在尝试如何将Material Design升华，设计出一个独特的Android版的软件，我不是专业的设计师
        我也肯定做不到让大家都满意的设计，但是挑战才能进步，小天盒子3.0.0，跨版本升级带给你不一样的体验。\n
        · 简洁设计/便捷操作/运行速度/使用体验\n
        · 修复2.x系列版本相关bug（如果你喜欢2.x版本，仍然可以通过我们的链接下载）
    </string>
    <string name="hide">隐藏证件照</string>
    <string name="hide_summary">开启后将替换您的证件照</string>
    <string name="safe">安全</string>
    <string name="pswd">信息编码</string>
    <string name="pswd_summary">Base64</string>
    <string name="nothing">未选择图片~</string>
    <string name="about_gp">关于GP</string>
    <string name="info_gp">该平台是公司根据校园正版化（GP）项目在我国高校中的具体使用需求自行研发的软件管理平台系统,
                同时也是我国第一套针对校园正版化软件如何正确有效安全使用的解决方案。\n
                本软件只是将TUST官网所列举的软件做了信息整合，提供给还不知道到有这个平台的同学，如果你需要更多的软件资源，可以去GP官网查看。此外，考虑到这些软件属于电脑软件，下载到手机上转起来也比较麻烦，而且挺占内存，所以直接以链接的方式分享！</string>
    <string name="my_info">我的资料</string>
    <string name="all_log">· 全部公告</string>
    <string name="join">· 加入我们 [计算机精英协会]</string>
    <string name="network_introduce">如果你和我一样不喜欢每次都输入账号密码登录登录校园网的话，就试试一键登录吧！
        小天会将您的密码加密储存在本地，并且不会以任何方式发送出去，小伙伴们就放心使用吧！不过小伙伴们也要谨慎保管好自己的密码哦！
        另外，去你的桌面上找找会出现一个一键登录校园网的快捷方式，以后就不用进来点我头上的按钮啦！
    </string>
    <string name="info_trans">Base64/SHA1/MD5</string>
    <string name="info_trans_title">后台及传输加密策略</string>
    <string name="change_week_in_main_page">周</string>
    <string name="Exit">退出登录</string>
    <string name="More_User">多用户</string>
    <string name="Course_week_toolbar_title">第%1$d周</string>
    <string name="null_input">存在空输入</string>
    <string name="try_again">重试</string>
    <string name="is_log_network">正在登录校园网……</string>
    <string name="get_data_use_fail">获取流量使用详情失败</string>
    <string name="school">校园</string>
    <string name="title_activity_today_card">TodayCardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">Copyright 2017-2019 surine.cn\nAll rights reserved</string>
    <string name="score_helper">成绩助手</string>
    <string name="bus_helper">校车时刻表</string>
    <string name="network_error">网络（非校园网）未连接</string>
    <string name="token_error_info">身份认证失败，请重新进入APP，将会自动验证身份</string>
    <string name="user_know">用户须知</string>
    <string name="please_read_me">请先阅读说明</string>
    <string name="network_no_connect">网络看样子被吃掉了＞﹏＜</string>
    <string name="my_info_from_server">我的资料</string>
    <string name="send_status">发表</string>
    <string name="send_success">发送成功</string>
    <string name="para_null">参数为空</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="sch_zone">课表</string>
    <string name="fragment_courseInfo_score">评分</string>
    <string name="fragment_CourseInfo_Recommand_Btn_Text">为学妹推荐本课程</string>
    <string name="CourseInfoFragment_load_error">未知错误！</string>
    <string name="CourseInfoFragmentsetScoreToTheCourse">为本课程评个分吧！</string>
    <string name="CourseInfoFragmentThanksToYouToSetScore">感谢您的评分！</string>
    <string name="CourseInfoFragmentSetScoreSuccess">评分成功！</string>
    <string name="CourseInfoFragmentHelpMe">求求你给我点分吧！</string>
    <string name="SendActionActivityQiniuTokenError">云存储TOKEN错误，请发送反馈给开发者</string>
    <string name="SendActionActivityNotAllPicture">图片未完全上传，请重新尝试！</string>
    <string name="SendActionActivityQiniuError">云服务错误</string>
    <string name="SendActionActivtySendError">动态发送失败!</string>
    <string name="SendActionActivtySendSuccess">发送成功</string>
    <string name="SendActionActivityUploading">正在上传……</string>
    <string name="SendActionActivityNullParam">内容为空！</string>
    <string name="ThirdPageFragmentNullContent">到底啦，亲！</string>
    <string name="ActionInfoActivitySendComment">发送评论</string>
    <string name="ActionInfoActivityCommentSuccess">评论成功！</string>
    <string name="ThirdPageFragmentLoveSuccess">操作成功</string>
    <string name="ThirdPageFragmentUnloveSuccess">取消赞</string>
    <string name="ReplyInCommentActivityDeleteFail">删除失败</string>
    <string name="ReplyInCommentActivityClipSuccess">内容已复制</string>
    <string name="MainActivityAllRead">全部已读</string>
    <string name="MainActivtyAllReadFail">执行全部已读操作失败</string>
    <string name="string_action">动态</string>
    <string name="pic_crop">图片加载处理</string>
    <string name="pic_crop_info">APP内默认启动图片自动压缩处理，如果图片加载出现问题，请尝试打开此开关</string>
    <string name="logo">LOGO</string>
    <string name="UserInfoActivityDontEdit">不可以编辑银家的信息哦！</string>
    <string name="EditUserInfoActivityChangeYourSign">修改您的个性签名</string>
    <string name="EditUserInfoActivityUpdateFail">更新失败！</string>
    <string name="EditUserInfoActivityUpdateSuccess">更新成功！</string>
    <string name="SendActionActivityAccountError">您的帐号已经冻结！</string>
    <string name="scorenewtermfragmentnetnoconn">网络貌似走丢了，点我或返回首页重试！</string>
    <string name="empty_class_room">空教室</string>
    <string name="empty_classroom_title">好好自习,\n天天向上!</string>
    <string name="no_net_or_permission">网络未连接或者教务处拒绝访问！</string>
    <string name="failtoupdatetheweek">网络连接异常，自动更新周失败</string>
    <string name="failtologinpswderror">登录小天服务器失败，账号或者密码错误</string>
    <string name="loginTustbox">登录小天</string>
    <string name="messageMenuTitle">消息</string>
    <string name="task_please_check_time">请选择时间！</string>
    <string name="pleasetryrestartapp">系统错误,请尝试重新启动APP</string>
    <string name="noticeforlogout">非特殊情况建议不要注销，注销后所有教务处数据或本地数据（课表，成绩，任务）等都可能被清除,由于小天盒子依赖于教务处，当教务处关闭的时候，再次登录将取不到数据，为了您的数据安全，请先通过网站检查教务处是否关闭，确认无误后再退出。</string>
    <string name="readyGetCourse">登录成功，请求课表中……</string>
    <string name="parseCourse">课表请求成功，准备解析……</string>
    <string name="loginError">因教务系统改版，需要先通过校园验证才能获取课表,请按照以下步骤获取课表\n
    1.点击对话框下方的开始验证按钮，加载统一身份验证页面（请在校园网环境下进行）\n
    2.在统一身份验证页面输入帐号密码（注意密码是您修改过的密码，不一定是身份证后6位）\n
    3.登录成功之后页面将会跳转到新教务系统，此时点击界面上的辅助登录按钮，小天盒子会自动获取您的课表及相关信息
    \n4.如果登录不成功，可以在[遇到问题]处反馈。</string>
    <string name="loginJwcFail_net_error">当您看到这条信息时,说明小天没法请求教务处登录页面，下面是几种原因:\n
    1.教务处服务维护，也就是说用电脑也登陆不了,您可以等教务处恢复正常后再登录。\n
    2.您的网络不是校园网，或者校园网和移动数据都处于打开的状态，建议仔细检查。\n
    3.您已连接校园网，但是很不稳定，通信不足以登录，您可以去图书馆或者其他网络好的地方尝试。\n
    4.教务处已经更新,请耐心等待开发者适配。\n
    </string>
    <string name="loginJwcFail_pass_error">当您看到这条信息时,说明小天没法请求登录教务处，下面是几种原因:\n
    1.一般是因为帐号密码输入有问题，请检查是否是身份证后六位或者是您修改过的密码。\n
    2.教务处某些源代码更新，如果确认帐号密码没问题，可以联系开发者适配。\n
    </string>
    <string name="loginJwcFail_cookie_error">当您看到这条信息时,说明小天Cookies管理发生异常,这种情况
        发生的概率比较小，也没有相对应的解决方案，一般可以退出重新登录，如果一直出现该情况，说明教务处可能更新了
        请耐心等待开发者适配。
    </string>
    <string name="loginJwcFail_json_error">当您看到这条信息时,说明小天课表解析失败,主要原因有以下几条:\n
    1.获取的课表数据错误，请点击反馈按钮反馈错误数据（待开发）\n
    2.数据库操作错误，部分系统会出现该情况。\n
    3.教务处更新了部分源代码，导致小天盒子无法识别。\n
    </string>
    <string name="loginJwcFail_user_error">当您看到这条信息时,说明小天无法获取您的个人信息,主要原因有以下几条:\n
    1.Cookies已失效，建议重新登录\n
    2.教务处登录接口或者个人信息接口已更新。\n
    3.个人身份认证失败（一般是小概率事件）\n
    </string>
    <string name="loginJwcFail_user_parse_error">当您看到这条信息时,说明小天个人信息解析失败,主要原因有以下几条:\n
    1.获取的个人信息数据错误，请点击反馈按钮反馈错误数据（待开发）\n
    2.数据库操作错误，部分系统会出现该情况。\n
    3.教务处更新了部分源代码，导致小天盒子无法识别。\n</string>
    <string name="loginJwcFail_backup_error">课表云备份中断，请保持网络畅通（校园网登录帐号，或者移动数据，设置后点击重试即可）</string>
    <string name="loginJwcFail_get_back_error">登录失败，您是否使用了校园网（TUST或者宿舍路由器）？或者如果您有课表云端备份，可以试试拉备份下来。</string>
    <string name="loginJwcFail_login_notice">请连接校园网并登录帐号，以确保可以请求教务处，同时做课表云备份</string>
    <string name="loginJwcFail_use_backup">该功能推荐在教务处已关闭的情况下使用。</string>
</resources>