<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Tust_White"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageview_about"
        android:src="@drawable/tust2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="casual"
        android:text="@string/version"
        android:layout_alignBottom="@+id/imageview_about"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_action_log"
        android:id="@+id/imageView6"
        android:layout_below="@+id/textView31"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginTop="34dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimary"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_alignStart="@+id/textView29"
        android:layout_alignTop="@+id/imageView6"
        android:id="@+id/textView5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color3"
        android:layout_below="@id/imageView6"
        />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_action_about"
        android:id="@+id/imageView4"
        android:layout_marginStart="13dp"
        android:layout_below="@+id/textView40"
        android:layout_alignStart="@+id/view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="37dp"
        android:gravity="center"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        android:layout_alignTop="@+id/imageView4"
        android:id="@+id/textView29"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/color3"
         android:layout_below="@id/imageView4"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:id="@+id/view"></View>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_marginTop="10dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/surine"/>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView32"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/qq"/>

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView33"
        android:layout_below="@+id/all_log"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/share"/>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView30"
        android:layout_below="@+id/textView30"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/bug_or"/>

   <ImageView
       android:layout_width="25dp"
       android:layout_height="25dp"
       android:src="@drawable/ic_action_thanks"
       android:layout_marginTop="16dp"
       android:layout_below="@+id/share"
       android:layout_alignStart="@+id/imageView4"
       android:id="@+id/imageView5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView34"
        android:layout_above="@+id/view2"
        android:layout_alignStart="@+id/textView29"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/all_log"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView33"
        android:layout_marginTop="10dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/all_log"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color3"
        android:layout_below="@id/imageView5"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/view2"></View>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view2"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/check_update"/>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView35"
        android:layout_below="@+id/textView35"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/notice"/>

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView36"
        android:layout_below="@+id/textView36"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/osl"/>

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView37"
        android:layout_below="@+id/textView37"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/help"/>
    <TextView
        android:id="@+id/join_celitea"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView38"
        android:layout_below="@+id/textView38"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:paddingStart="77dp"
        android:text="@string/join"/>

   <View
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:layout_marginStart="30dp"
       android:layout_marginEnd="30dp"
       android:layout_below="@id/join_celitea"
       android:background="@color/color3"
       android:layout_marginTop="20dp"
       android:id="@+id/view3"/>

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="11dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app"/>

    <TextView
        android:id="@+id/textView40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/ripple"
        android:fontFamily="casual"
        android:lineSpacingExtra="10sp"
        android:paddingEnd="35dp"
        android:paddingStart="77dp"
        android:text="@string/new_log"
        android:textAlignment="viewStart"/>

</RelativeLayout>