<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pika"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="37sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_marginTop="92dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/lin1"
    android:background="#ecebeb"
    android:orientation="vertical"
    android:layout_marginTop="55dp"
    android:layout_below="@id/textView22"
    android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/surine"/>

</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view1"
        android:layout_below="@id/lin1"
        >
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/lin2"
        android:layout_below="@id/view1"
        android:background="#ecebeb"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email_surine223450_gmail_com"
            android:layout_below="@+id/lin1"
            android:layout_alignParentStart="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_below="@+id/textView22"
        android:layout_alignEnd="@+id/textView22"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_action_share"/>


</RelativeLayout>